# ags

./: .cirrus.yml  .gitignore  CMakeLists.txt  Changes.txt  README.md  version.json
.github/workflows/: build-linux-docker.yml  build.yml
Android/: and-build.sh
CMake/: AgsPolicies.cmake  FetchGoogleTest.cmake  FetchOgg.cmake  FetchOpenALSoft.cmake  FetchSDL2.cmake  FetchSDL_Sound.cmake  FetchSDL_ttf.cmake  FetchTheora.cmake  FetchVorbis.cmake  FindLocalOpenAL.cmake  FindOgg.cmake  FindTheora.cmake  FindVorbis.cmake  PrepareFreetype.cmake
CMake/Extra/: OpenALSoft_CMakeLists.txt
Common/: CMakeLists.txt
Common/ac/: common_defines.h  gamesetupstruct.cpp  gamesetupstructbase.cpp  gamesetupstructbase.h  keycode.h  spritecache.cpp  spritecache.h  spritefile.cpp  spritefile.h
Common/core/: platform.h
Common/font/: fonts.cpp  ttffontrenderer.cpp  ttffontrenderer.h  wfnfontrenderer.cpp
Common/game/: customproperties.cpp  customproperties.h  main_game_file.cpp
Common/gfx/: allegrobitmap.cpp  allegrobitmap.h  bitmap.cpp  bitmap.h  bitmapdata.h  blender.h  (+2 more)
Compiler/: CMakeLists.txt  compiler.cpp
Editor/: Directory.Build.props
Emscripten/: install_dependencies.sh  launcher_index.html
Engine/: CMakeLists.txt  Makefile  Makefile-defs.linux  Makefile-objs
OSX/: README.md
Script/: build_templates.sh
Solutions/: AGS.Editor.Full.sln  Engine.sln  libogg.props  libtheora.props  libvorbis.props  sdl2.props
Tools/: CMakeLists.txt
Windows/: README.md
debian/: README.md
iOS/: README.md
libsrc/: download.sh  sha1sums
libsrc/glm/: CMakeLists.txt  version.txt
(+337 files in other folders)
